Assignment2/attica_compiler/src/org/dejave/attica/sql/parser/SQLParser.java
/* Generated By:JavaCC: Do not edit this line. SQLParser.java */
package org.dejave.attica.sql.parser;

import java.io.InputStream;
import java.io.ByteArrayInputStream;

import java.util.List;
import java.util.ArrayList;

import org.dejave.attica.server.Statement;
import org.dejave.attica.server.Query;
import org.dejave.attica.server.ShowCatalog;
import org.dejave.attica.server.TableCreation;
import org.dejave.attica.server.TableDeletion;
import org.dejave.attica.server.TupleInsertion;
import org.dejave.attica.server.TableDescription;
import org.dejave.attica.server.EnableHash;
import org.dejave.attica.engine.algebra.*;
import org.dejave.attica.model.*;
import org.dejave.attica.storage.Catalog;
import org.dejave.util.Pair;

public class SQLParser implements SQLParserConstants {

       private Catalog catalog;

        public void setCatalog(Catalog cat) {
               this.catalog = cat;
        }

        public static void main(String args[]) {
                System.out.println("Reading from standard input...");
                SQLParser t = new SQLParser(System.in);
                try {
                        t.Start();
                        System.out.println("Thank you.");
                } catch (Exception e) {
                        System.out.println("Oops.");
                        System.out.println(e.getMessage());
                        e.printStackTrace();
                }
        }

/*
TOKEN:
{
	< EMPTY: "" >
}
*/

/****************************************************
 ** The SQL grammar starts from this point forward **
 ****************************************************/
  static final public Statement Start() throws ParseException {
        Object o = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SELECT:
      o = Query();
                                // safe to ignore the warning since we are
                                // casting to the return type
                                @SuppressWarnings("unchecked")
                                List<AlgebraicOperator> ops =
                                        (List<AlgebraicOperator>) o;
                                {if (true) return new Query(ops);}
      break;
    case CREATE:
      o = Create();
                                {if (true) return new TableCreation((Table) o);}
      break;
    case DROP:
      o = Drop();
                                {if (true) return new TableDeletion((String) o);}
      break;
    case INSERT:
      o = Insert();
                                // safe to ignore the warning since we are
                                // casting to the return type
                                @SuppressWarnings("unchecked")
                                Pair<String, List<Comparable>> pair =
                                     (Pair<String, List<Comparable>>) o;
                                {if (true) return new TupleInsertion(pair.first,
                                                          pair.second);}
      break;
    case CATALOG:
      Catalog();
                                {if (true) return new ShowCatalog();}
      break;
    case DESCRIBE:
      o = Describe();
                                {if (true) return new TableDescription((String) o);}
      break;
    case ENABLE:
      EnableHash();
                                {if (true) return new EnableHash(true);}
      break;
    case DISABLE:
      DisableHash();
                                {if (true) return new EnableHash(false);}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public List<AlgebraicOperator> Query() throws ParseException {
        List<AlgebraicOperator> algebra = new ArrayList<AlgebraicOperator>();
        List<AlgebraicOperator> where = null;
        Projection p = null;
        Sort s = null;
        Group g = null;
    p = SelectClause();
                        algebra.add(p);
    FromClause();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      where = WhereClause();
                                algebra.addAll(where);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ORDER:
      s = SortClause();
                                algebra.add(s);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GROUP:
      g = GroupClause();
                                algebra.add(g);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
                        {if (true) return algebra;}
    throw new Error("Missing return statement in function");
  }

  static final public Projection SelectClause() throws ParseException {
        List<Variable> projections = new ArrayList<Variable>();
    jj_consume_token(SELECT);
    projections = AttributeList();
                        //System.out.println(projections);
                        Projection p = new Projection(projections);
                        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public void FromClause() throws ParseException {
    jj_consume_token(FROM);
    TableList();
  }

  static final public List<AlgebraicOperator> WhereClause() throws ParseException {
        List<AlgebraicOperator> v = null;
    jj_consume_token(WHERE);
    v = BooleanExpression();
                        {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public Sort SortClause() throws ParseException {
        List<Variable> attributes = new ArrayList<Variable>();
    jj_consume_token(ORDER);
    jj_consume_token(BY);
    attributes = AttributeList();
                        Sort s = new Sort(attributes);
                        {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public Group GroupClause() throws ParseException {
        List<Variable> attributes = new ArrayList<Variable>();
    jj_consume_token(GROUP);
    jj_consume_token(BY);
    attributes = AttributeList();
                        Group g = new Group(attributes);
                        {if (true) return g;}
    throw new Error("Missing return statement in function");
  }

  static final public List<Variable> AttributeList() throws ParseException {
        List<Variable> v = new ArrayList<Variable>();
        Variable var = null;
    var = Attribute();
                        v.add(var);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_1;
      }
      jj_consume_token(COMMA);
      var = Attribute();
                        v.add(var);
    }
                        {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public void TableList() throws ParseException {
    Table();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      Table();
    }
  }

  static final public String Table() throws ParseException {
        String x = null;
    if (jj_2_1(2147483647)) {
      AliasedTable();
                                {if (true) throw new ParseException("Table aliases not "
                                                         + "yet supported.");}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        x = Identifier();
                                {if (true) return x;}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Variable Attribute() throws ParseException {
        Variable var = null;
    if (jj_2_2(2147483647)) {
      var = QualifiedAttribute();
                                {if (true) return var;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        Identifier();
                                {if (true) throw new ParseException("Unqualified "
                                                         + "attributes not "
                                                         + "yet supported.");}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public List<AlgebraicOperator> BooleanExpression() throws ParseException {
        List<AlgebraicOperator> v = new ArrayList<AlgebraicOperator>();
    v = DisjunctiveExpression();
                        {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public List<AlgebraicOperator> DisjunctiveExpression() throws ParseException {
        List<AlgebraicOperator> v = new ArrayList<AlgebraicOperator>();
    v = ConjunctiveExpression();
    label_3:
    while (true) {
      if (jj_2_3(2147483647)) {
        ;
      } else {
        break label_3;
      }
      DisjunctionOperator();
                                        {if (true) throw new ParseException("Disjunction "
                                                                 + "not yet "
                                                                 + "supported");}
      ConjunctiveExpression();
    }
                        {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public List<AlgebraicOperator> ConjunctiveExpression() throws ParseException {
        List<AlgebraicOperator> algebra = new ArrayList<AlgebraicOperator>();
        AlgebraicOperator op = null;
    op = UnaryExpression();
                        algebra.add(op);
    label_4:
    while (true) {
      if (jj_2_4(2147483647)) {
        ;
      } else {
        break label_4;
      }
      ConjunctionOperator();
      op = UnaryExpression();
                                        algebra.add(op);
    }
                        {if (true) return algebra;}
    throw new Error("Missing return statement in function");
  }

  static final public AlgebraicOperator UnaryExpression() throws ParseException {
        AlgebraicOperator op = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      NegationOperator();
      BooleanExpression();
                                {if (true) throw new ParseException("Negation not yet "
                                                         + "supported.");}
      break;
    case OPENPAR:
      jj_consume_token(OPENPAR);
      BooleanExpression();
      jj_consume_token(CLOSEPAR);
                                {if (true) throw new ParseException("Nested expressions "
                                                         + "not yet "
                                                         + "supported.");}
      break;
    case ID:
      op = RelationalExpression();
                                {if (true) return op;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public AlgebraicOperator RelationalExpression() throws ParseException {
        Variable leftVar = null;
        Variable rightVar = null;
        String val = null;
        Qualification.Relationship qual = Qualification.Relationship.EQUALS;
        AlgebraicOperator op = null;
    leftVar = Attribute();
    qual = QualificationOperator();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      rightVar = Attribute();
                                VariableVariableQualification vvarq =
                                        new VariableVariableQualification(qual,
                                            leftVar, rightVar);
                                op = new Join(vvarq);
      break;
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case STRING_LITERAL:
      val = Literal();
                                VariableValueQualification vvalq =
                                        new VariableValueQualification(qual,
                                            leftVar, val);
                                op = new Selection(vvalq);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                        {if (true) return op;}
    throw new Error("Missing return statement in function");
  }

  static final public void DisjunctionOperator() throws ParseException {
    jj_consume_token(OR);
  }

  static final public void ConjunctionOperator() throws ParseException {
    jj_consume_token(AND);
  }

  static final public void NegationOperator() throws ParseException {
    jj_consume_token(NOT);
  }

  static final public Qualification.Relationship QualificationOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LESS:
      jj_consume_token(LESS);
                                {if (true) return Qualification.Relationship.LESS;}
      break;
    case LESSEQUAL:
      jj_consume_token(LESSEQUAL);
                                {if (true) return Qualification.Relationship.LESS_EQUALS;}
      break;
    case GREATER:
      jj_consume_token(GREATER);
                                {if (true) return Qualification.Relationship.GREATER;}
      break;
    case GREATEREQUAL:
      jj_consume_token(GREATEREQUAL);
                                {if (true) return Qualification.Relationship.GREATER_EQUALS;}
      break;
    case EQUAL:
      jj_consume_token(EQUAL);
                                {if (true) return Qualification.Relationship.EQUALS;}
      break;
    case NOTEQUAL:
      jj_consume_token(NOTEQUAL);
                                {if (true) return Qualification.Relationship.NOT_EQUALS;}
      break;
    case NOTEQUAL2:
      jj_consume_token(NOTEQUAL2);
                                {if (true) return Qualification.Relationship.NOT_EQUALS;}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void AliasedTable() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(ID);
  }

  static final public Variable QualifiedAttribute() throws ParseException {
        Token table = null;
        Token attr = null;
    table = jj_consume_token(ID);
    jj_consume_token(DOT);
    attr = jj_consume_token(ID);
                        {if (true) return new Variable(table.image, attr.image);}
    throw new Error("Missing return statement in function");
  }

  static final public String Identifier() throws ParseException {
        Token x = null;
    x = jj_consume_token(ID);
                        {if (true) return x.image;}
    throw new Error("Missing return statement in function");
  }

  static final public String Literal() throws ParseException {
        Token x = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_LITERAL:
      x = jj_consume_token(STRING_LITERAL);
                                String s = x.image;
                                s = s.substring(1, s.length()-1);
                                {if (true) return s;}
      break;
    case INTEGER_LITERAL:
      x = jj_consume_token(INTEGER_LITERAL);
                                        {if (true) return x.image;}
      break;
    case FLOATING_POINT_LITERAL:
      x = jj_consume_token(FLOATING_POINT_LITERAL);
                                               {if (true) return x.image;}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Table Create() throws ParseException {
        List<Attribute> v = null;
        String table;
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    table = Identifier();
    jj_consume_token(OPENPAR);
    v = AttributeDeclarationList(table);
    jj_consume_token(CLOSEPAR);
                                {if (true) return new Table(table, v);}
    throw new Error("Missing return statement in function");
  }

  static final public List<Attribute> AttributeDeclarationList(String table) throws ParseException {
        List<Attribute> v = new ArrayList<Attribute>();
        TableAttribute tab = null;
    tab = AttributeDeclaration(table);
                        v.add(tab);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      tab = AttributeDeclaration(table);
                                                v.add(tab);
    }
                        {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public TableAttribute AttributeDeclaration(String table) throws ParseException {
        String name = null;
        Class<? extends Comparable> type = null;
    name = Identifier();
    type = Type();
                        {if (true) return new TableAttribute(table, name, type);}
    throw new Error("Missing return statement in function");
  }

  static final public Class<? extends Comparable> Type() throws ParseException {
        Token token = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      jj_consume_token(INTEGER);
                                {if (true) return Integer.class;}
      break;
    case LONG:
      jj_consume_token(LONG);
                                {if (true) return Long.class;}
      break;
    case CHAR:
      jj_consume_token(CHAR);
                                {if (true) return Character.class;}
      break;
    case BYTE:
      jj_consume_token(BYTE);
                                {if (true) return Byte.class;}
      break;
    case SHORT:
      jj_consume_token(SHORT);
                                {if (true) return Short.class;}
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
                                {if (true) return Double.class;}
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
                                {if (true) return Float.class;}
      break;
    case STRING:
      jj_consume_token(STRING);
                                {if (true) return String.class;}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Pair<String, List<Comparable>> Insert() throws ParseException {
        String table = null;
        List<Comparable> v = new ArrayList<Comparable>();
    jj_consume_token(INSERT);
    jj_consume_token(INTO);
    table = Identifier();
    jj_consume_token(VALUES);
    jj_consume_token(OPENPAR);
    v = ValueList();
    jj_consume_token(CLOSEPAR);
                        {if (true) return new Pair<String, List<Comparable>>(table, v);}
    throw new Error("Missing return statement in function");
  }

  static final public List<Comparable> ValueList() throws ParseException {
        List<Comparable> v = new ArrayList<Comparable>();
        String l = null;
    l = Literal();
                        v.add(l);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      jj_consume_token(COMMA);
      l = Literal();
                                v.add(l);
    }
                        {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public String Drop() throws ParseException {
        String id = null;
    jj_consume_token(DROP);
    jj_consume_token(TABLE);
    id = Identifier();
                        {if (true) return id;}
    throw new Error("Missing return statement in function");
  }

  static final public void Catalog() throws ParseException {
    jj_consume_token(CATALOG);
  }

  static final public void EnableHash() throws ParseException {
    jj_consume_token(ENABLE);
    jj_consume_token(HASH);
  }

  static final public void DisableHash() throws ParseException {
    jj_consume_token(DISABLE);
    jj_consume_token(HASH);
  }

  static final public String Describe() throws ParseException {
        String s = null;
    jj_consume_token(DESCRIBE);
    jj_consume_token(TABLE);
    s = Identifier();
                        {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }
